<?xml version="1.0" encoding="utf-8"?>

<!---/******************************************************************************
* @file       strings.xml
* @brief      string resource for VZW GPS Location Provider test app
*  Coppyright (C) 2010 Qualcomm Technologies, Inc.
*  All Rights Reserved. Qualcomm Technologies Proprietary and Confidential.
*  *****************************************************************************-->

<resources>
    <string name="labelUnknownPrivacy">unknown</string>
    <string name="labelGetPrivacy">Get Privacy</string>
    <string name="labelSetPrivacySetting">Set Privacy</string>
    <string name="name_vzw_client">Vzw Client</string>
    <string name="name_normal_client">Normal Android</string>

    <string name="app_name">QVTester-04</string>
    <string name="LabelModeSel">Mode</string>
    <string name="LabelNumFixSel"># of Fix</string>


<string-array name="GpsMode"><item>MSA</item>
<item>MSB</item>
<item>Standalone</item>
<item>AFLT</item>
<item>Speed Optimized</item>
<item>Accuracy Optimized</item>
<item>Data Optimized</item>
</string-array>

<string name="DefaultNumFix">20</string>
<string name="DefaultTimeBetweenFix">2</string>
<string name="LabelTimeBetweenFix">Time (sec) between fix</string>
<string name="DefaultMpcAddr">127.0.0.1</string>
<string name="LabelPdeAddr">PDE Addr</string>
<string name="LabelAccuracyH">Preferred accuracy (H, m)</string>
<string name="LabelAccuracyV">Preferred accuracy (V, m)</string>
<string name="LabelMaxResponseTime">Timeout (sec)</string>
<string name="LabelAppCredential">App credential</string>
<string name="DefaultAccuracyH">50</string>
<string name="DefaultAccuracyV">50</string>
<string name="DefaultTimeout">120</string>
<string name="DefaultAppCredential"></string>
<string name="LabelRunTwo">Run with normal stack</string>
<string name="LabelRunOne">Run VzW</string>
<string name="LabelRunState1">FSM Test 1</string>
<string name="LabelRunState2">FSM Test 2</string>

<string name="EnigneStatus">Enigne Status</string>
<string name="NA">N/A</string>
<string name="GpsStatus">Gps Status</string>
<string name="Session">Session</string>
<string name="TTF">TTF</string>
<string name="Type">Type</string>
<string name="Loc">Loc</string>
<string name="StopnGo">StopnGo</string>
<string name="Mode">Mode</string>
<string name="stop">Stop</string>
<string name="labelPdePort">PDE Port</string>
<string name="EditTextPdePort">1000</string>

<string-array name="PrivacyMode">
<item>911 Only</item>
<item>ON</item>
</string-array>
<string name="non_aiding">Deselect All Aiding</string>
<string name="all_aiding">Select All Aiding</string>
<string name="done">Delete Selected</string>
<string name="Ephemeris">Ephemeris</string>
<string name="GLO_Ephemeris">GLO Ephemeris</string>
<string name="Alamanac">Alamanac</string>
<string name="GLO_Alamanac">GLO Alamanac</string>
<string name="Alamanac_Corr">Alamanac Corr</string>
<string name="GLO_Alamanac_Corr">GLO Alamanac Corr</string>
<string name="SV_DIR">SV DIR</string>
<string name="GLO_SV_DIR">GLO SV DIR</string>
<string name="SV_Steer">SV Steer</string>
<string name="GLO_SV_Steer">GLO SV Steer</string>
<string name="Cell_DB_Info">Cell DB Info</string>
<string name="RTI">RTI</string>
<string name="GPS_Time">GPS Time</string>
<string name="GLO_Time">GLO Time</string>
<string name="Freq_Bias_Est">Freq Bias Est</string>
<string name="Time">Time</string>
<string name="Iono">Iono</string>
<string name="UTC">UTC</string>
<string name="Health">Health</string>
<string name="SA_Data">SA Data</string>
<string name="position">position</string>

</resources>
