<?xml version="1.0" encoding="utf-8"?>

<!---/******************************************************************************
* @file       main.xml
* @brief      main screen for VZW GPS Location Provider test app
*  Coppyright (C) 2010 Qualcomm Technologies, Inc.
*  All Rights Reserved. Qualcomm Technologies Proprietary and Confidential.
*  *****************************************************************************-->

<ScrollView android:id="@+id/AidingDataView" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="wrap_content">
<TableLayout android:id="@+id/TableLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content">
<TableRow android:id="@+id/TableRow08" android:layout_height="wrap_content" android:layout_width="fill_parent">
	<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ButtonAllAiding" android:text="@string/all_aiding"></Button>
	<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ButtonDone" android:text="@string/done"></Button>
</TableRow>

<TableRow android:id="@+id/TableRow02" android:layout_height="wrap_content" android:isScrollContainer="true" android:layout_width="fill_parent">
    <CheckBox android:text="@string/Ephemeris" android:id="@+id/checkBox0" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
    <CheckBox android:text="@string/GLO_Ephemeris" android:id="@+id/checkBox14" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
</TableRow>

<TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content" android:layout_width="wrap_content">
	<CheckBox android:text="@string/Alamanac" android:id="@+id/checkBox1" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
	<CheckBox android:text="@string/GLO_Alamanac" android:id="@+id/checkBox15" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
</TableRow>

<TableRow android:id="@+id/TableRow03" android:layout_height="wrap_content" android:layout_width="wrap_content">
    <CheckBox android:text="@string/Alamanac_Corr" android:id="@+id/checkBox12" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
    <CheckBox android:text="@string/GLO_Alamanac_Corr" android:id="@+id/checkBox18" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
</TableRow>

<TableRow android:id="@+id/TableRow04" android:layout_height="wrap_content" android:layout_width="wrap_content">
    <CheckBox android:text="@string/SV_DIR" android:id="@+id/checkBox7" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
    <CheckBox android:text="@string/GLO_SV_DIR" android:id="@+id/checkBox16" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
</TableRow>

<TableRow android:id="@+id/TableRow09" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <CheckBox android:text="@string/SV_Steer" android:id="@+id/checkBox8" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
    <CheckBox android:text="@string/GLO_SV_Steer" android:id="@+id/checkBox17" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
</TableRow>

<TableRow android:id="@+id/TableRow05" android:layout_height="wrap_content" android:layout_width="wrap_content">
    <CheckBox android:text="@string/Cell_DB_Info" android:id="@+id/checkBox11" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
    <CheckBox android:text="@string/RTI" android:id="@+id/checkBox10" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
</TableRow>

<TableRow android:id="@+id/TableRow06" android:layout_height="wrap_content" android:layout_width="wrap_content">
    <CheckBox android:text="@string/GPS_Time" android:id="@+id/checkBox19" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
    <CheckBox android:text="@string/GLO_Time" android:id="@+id/checkBox20" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
</TableRow>

<TableRow android:id="@+id/TableRow06" android:layout_height="wrap_content" android:layout_width="wrap_content">
    <CheckBox android:text="@string/Freq_Bias_Est" android:id="@+id/checkBox13" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
    <CheckBox android:text="@string/Time" android:id="@+id/checkBox3" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
</TableRow>

<TableRow android:id="@+id/TableRow06" android:layout_height="wrap_content" android:layout_width="wrap_content">
	<CheckBox android:text="@string/Iono" android:id="@+id/checkBox4" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
    <CheckBox android:text="@string/UTC" android:id="@+id/checkBox5" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
</TableRow>

<TableRow android:id="@+id/TableRow06" android:layout_height="wrap_content" android:layout_width="wrap_content">
    <CheckBox android:text="@string/Health" android:id="@+id/checkBox6" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
    <CheckBox android:text="@string/SA_Data" android:id="@+id/checkBox9" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
</TableRow>

<TableRow android:id="@+id/TableRow08" android:layout_height="wrap_content" android:layout_width="fill_parent">
    <CheckBox android:text="@string/position" android:id="@+id/checkBox2" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
</TableRow>

</TableLayout>
</ScrollView>
