<?xml version="1.0" encoding="utf-8"?>

<!---/******************************************************************************
* @file       tracking.xml
* @brief      tracking screen for VZW GPS Location Provider test app
*  Coppyright (C) 2010 Qualcomm Technologies, Inc.
*  All Rights Reserved. Qualcomm Technologies Proprietary and Confidential.
*  *****************************************************************************-->

<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
<TableLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableLayoutMain"><TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/EnigneStatus"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TextViewEngineStatus" android:gravity="center_horizontal" android:text="@string/NA"></TextView>
</TableRow>
<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/GpsStatus"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TextViewGpsStatus" android:gravity="center_horizontal" android:text="@string/NA"></TextView>
</TableRow>



<TableRow android:id="@+id/TableRow03" android:layout_height="wrap_content" android:layout_width="fill_parent">
<TextView android:layout_height="wrap_content" android:id="@+id/TextViewClientId01" style="center_horizontal" android:text="@string/name_vzw_client" android:layout_width="fill_parent"></TextView>



<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent">


<LinearLayout android:id="@+id/LinearLayout04" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent"><TextView android:layout_height="wrap_content" android:id="@+id/TextViewFixMode01" android:text="@string/Mode" android:layout_width="wrap_content" android:layout_margin="2pt"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Session" android:id="@+id/TextViewSessionId01" android:layout_margin="2pt"></TextView><TextView android:layout_height="wrap_content" android:id="@+id/TextViewTTF01" android:text="@string/TTF" android:layout_width="wrap_content" android:layout_margin="2pt"></TextView><Button android:layout_height="wrap_content" android:text="@string/stop" android:id="@+id/ButtonStop01" android:layout_width="wrap_content"></Button></LinearLayout><LinearLayout android:id="@+id/LinearLayout03" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TextViewFixType01" style="center_horizontal" android:text="@string/Type" android:layout_marginRight="10pt"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TextViewPosition01" android:text="@string/Loc" android:layout_marginRight="10pt"></TextView><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/StopnGo" android:id="@+id/ButtonRestart01"></Button></LinearLayout>
</LinearLayout>
</TableRow>
<TableRow android:id="@+id/TableRow03" android:layout_height="wrap_content" android:layout_width="fill_parent">
<TextView android:layout_height="wrap_content" android:id="@+id/TextViewClientId01" style="center_horizontal" android:text="@string/name_normal_client" android:layout_width="fill_parent"></TextView>



<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent">


<LinearLayout android:id="@+id/LinearLayout04" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_height="wrap_content" android:text="@string/Mode" android:layout_width="wrap_content" android:id="@+id/TextViewFixMode02" android:layout_margin="2pt"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Session" android:id="@+id/TextViewSessionId02" android:layout_margin="2pt"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/TTF" android:id="@+id/TextViewTTF02" android:layout_margin="2pt"></TextView><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stop" android:id="@+id/ButtonStop02"></Button></LinearLayout><LinearLayout android:id="@+id/LinearLayout03" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" style="center_horizontal" android:text="@string/Type" android:layout_marginRight="10pt" android:id="@+id/TextViewFixType02"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Loc" android:layout_marginRight="10pt" android:id="@+id/TextViewPosition02"></TextView><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/StopnGo" android:id="@+id/ButtonRestart02"></Button></LinearLayout>
</LinearLayout>
</TableRow>

</TableLayout>
</ScrollView>
